cache retailers list and add command to update it

--- a/src/sync/Properties/launchSettings.json
+++ b/src/sync/Properties/launchSettings.json
@@ -3,6 +3,10 @@
     "sync": {
       "commandName": "Project",
       "commandLineArgs": "\"$(ProjectDir)\\..\\..\\data\""
+    },
+    "update-retailers": {
+      "commandName": "Project",
+      "commandLineArgs": "update-retailers \"$(ProjectDir)\\..\\..\\data\""
     }
   }
 }
